# STAR-Vote

./: LICENSE  README.md  TESTING.md  USAGE.md  star-architecture.hs
StarVote/: Controller.hs  Mod.hs  Types.hs  Util.hs  VoterStatusDatabase.hs  architecture.hs
append-only-bb/: append-only-bb.cabal
append-only-bb/bbclient/: Main.hs
append-only-bb/bbserver/: Main.hs
append-only-bb/data/js/: server.js
append-only-bb/src/: BB.hs
append-only-bb/src/BB/: DB.hs  JSON.hs  Protocol.lhs  Time.hs
bon/: STARVote.bon  STARVote_vocab.txt
prototypes/: VerifiableElGamal.hs
star-controller/: star-controller.cabal
star-controller/Application/Star/: Controller.hs
star-controller/src/: Main.hs
star-controller/src/Application/Star/: Controller.hs  StarController.hs
star-controller/static/: site.css
star-crypto/: .gitignore  cabal.sandbox.config  star-crypto.cabal
star-crypto/src/: Main.hs
star-crypto/src/StarVote/: Crypto.hs
star-crypto/src/StarVote/Crypto/: Groups.hs  Math.hs  Protocol.hs  ThresholdElGamal.hs  Types.hs
star-crypto/test/: All.hs
star-init/: Main.hs  star-init.cabal
star-init/Application/StarInit/: Controller.hs  View.hs
star-keygen/: Main.hs  bb-contact-info  star-keygen.cabal
star-terminal/: .gitignore  Makefile  star-terminal.cabal  start.sh
star-terminal/src/: Main.hs
star-terminal/src/Application/StarTerminal/: Ballot.hs  BallotStyle.hs  Controller.hs  LinkHelper.hs  Localization.hs  PaperBallot.hs  State.hs  View.hs
star-terminal/static/css/: site.css  solid-select.css  spartan.css
star-terminal/static/js/: site.js
star-types/: star-types.cabal
star-types/src/Application/Star/: Ballot.hs  BallotStyle.hs  HashChain.hs  ID.hs  Mod.hs  Precinct.hs  SerializableBS.hs  Voter.hs
star-util/: star-util.cabal
star-util/src/Application/Star/: CommonImports.hs  Instances.hs  Templates.hs  Util.hs
star-voter-db/: Main.hs  star-voter-db.cabal
star-voter-db/Application/Star/: VoterStatusDatabase.hs  VoterStatusSticker.hs  VoterStatusTemplates.hs
star-voter-db/src/Application/Star/: VoterStatusDatabase.hs  VoterStatusForms.hs  VoterStatusSticker.hs
startup-script/: requirements.txt  serversession.yaml  serversession_filled.yaml  startup.py
