Name:                star-terminal
Version:             0.1
Synopsis:            Prototype of a voting machine
License:             AllRightsReserved
Author:              Jesse Hallett <jesse@galois.com>
Maintainer:          Jesse Hallett <jesse@galois.com>
Stability:           Experimental
Category:            Application
Build-type:          Simple
Cabal-version:       >=1.2
Description:
  A prototype of one component of STAR-Vote, a secure and auditable voting system.
  STAR-vote is described at <https://www.usenix.org/system/files/conference/evtwote13/jets-0101-bell.pdf>.
  .
  STAR-Vote describes several machines that are involved in the voting process.
  This project implements software for a voting terminal.
  It consists of a web server.
  The intention is that each voting terminal runs its own instance of the server,
  in addition to a web browser, which displays a user interface to the voter.
  .
  The user interface is optimized for tablet-sized touchscreen devices;
  but it will work fine on mouse-operated computers too.
  .
  The server is started by running the @star-terminal@ executable.
  It requires certain environment variables to provide configuration parameters.
  Examples of those parameters are provided in the @start.sh@ script.
  See `Application.StarTerminal.State` for parameter documentation.
  .
  Quickstart:
  .
  * @make@
  * @./start.sh@
  * In a web browser, navigate to <http://localhost:8000/ballots>
  * Enter the code: 25682



Executable star-terminal
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson,
    base                      >= 4     && < 5,
    base16-bytestring,
    binary,
    blaze-html,
    blaze-markup,
    bytestring                >= 0.9.1 && < 0.11,
    case-insensitive,
    containers,
    data-default,
    http-client,
    http-client-tls,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    random,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    star-types,
    star-util,
    text,
    transformers,
    uuid

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
