Name:                star-terminal
Version:             0.1
Synopsis:            Prototype of a voting machine
License:             AllRightsReserved
Author:              Jesse Hallett <jesse@galois.com>
Maintainer:          Jesse Hallett <jesse@galois.com>
Stability:           Experimental
Category:            Application
Build-type:          Simple
Cabal-version:       >=1.2
Description:
  A prototype of one component of STAR-Vote, a secure and auditable voting system.
  STAR-vote is described at <https://www.usenix.org/system/files/conference/evtwote13/jets-0101-bell.pdf>.
  .
  STAR-Vote describes several machines that are involved in the voting process.
  This project implements software for a voting terminal.
  It consists of a web server.
  The intention is that each voting terminal runs its own instance of the server,
  in addition to a web browser, which displays a user interface to the voter.
  .
  The user interface is optimized for tablet-sized touchscreen devices;
  but it will work fine on mouse-operated computers too.
  .
  The server is started by running the @star-terminal@ executable.
  It requires certain environment variables to provide configuration
  parameters on the first execution. Examples of those parameters are
  provided in the @start.sh@ script.  See `Application.StarTerminal.State`
  for parameter documentation.
  .
  Quickstart:
  .
  * @make@
  * @./start.sh@
  * In a web browser, navigate to <http://localhost:8000/ballots>
  * Enter the code: 25682
data-files:
  static/bootstrap-3.2.0-dist/css/*.css
  static/bootstrap-3.2.0-dist/css/*.min.css
  static/bootstrap-3.2.0-dist/css/*.css.map
  static/bootstrap-3.2.0-dist/fonts/glyphicons-halflings-regular.eot
  static/bootstrap-3.2.0-dist/fonts/glyphicons-halflings-regular.svg
  static/bootstrap-3.2.0-dist/fonts/glyphicons-halflings-regular.ttf
  static/bootstrap-3.2.0-dist/fonts/glyphicons-halflings-regular.woff
  static/bootstrap-3.2.0-dist/js/*.js
  static/bootstrap-3.2.0-dist/js/*.min.js
  static/css/*.css
  static/js/*.js
  static/img/*.jpg

Executable star-terminal
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    acid-state                >= 0.12.3 && < 0.13,
    aeson,
    barcodes-code128          >= 0.1    && < 0.2,    
    base                      >= 4      && < 5,
    base16-bytestring,
    base64-bytestring         >= 1.0.0.1 && < 1.1,
    binary,
    blaze-html,
    blaze-markup,
    bytestring                >= 0.9.1  && < 0.11,
    case-insensitive,
    containers,
    crypto-api                >= 0.13   && < 0.14,
    data-default,
    DRBG                      >=0.5     && <0.6,
    HPDF                      >=1.4.6   && <1.4.7,
    http-client,
    http-client-tls,
    MonadCatchIO-transformers >= 0.2.1  && < 0.4,
    monadcryptorandom         >= 0.6    && < 0.7,
    mtl                       >= 2      && < 3,
    lens                      >= 4.4    && < 4.7,
    old-locale,
    random,
    safecopy                  >= 0.8.3  && < 0.9,
    snap-core                 >= 0.9    && < 0.10,
    snap-server               >= 0.9    && < 0.10,
    star-types,
    star-util,
    text,
    time,
    transformers,
    uuid

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
