Name:                star-types
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  hs-source-dirs: src
  Exposed-modules:     Application.Star.Ballot,
                       Application.Star.BallotStyle,
                       Application.Star.HashChain,
                       Application.Star.ID,
                       Application.Star.Mod,
                       Application.Star.Precinct,
                       Application.Star.SerializableBS,
                       Application.Star.Voter
  Build-depends:        
    aeson,
    base               >= 4     && < 5,
    base64-bytestring,
    binary,
    bytestring,
    cassava,
    containers,
    random             >= 1     && < 2,
    SHA,
    text,
    vector

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
