Name:                star-util
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  hs-source-dirs: src
  Exposed-modules:     Application.Star.CommonImports,
                       Application.Star.Templates,
                       Application.Star.Util
  Build-depends:
    acid-state                >= 0.12.3 && < 0.13,
    aeson                     >= 0.7   && < 0.9,
    base                      >= 4     && < 5,
    blaze-html                >= 0.7   && < 0.8,
    bytestring,
    case-insensitive          >= 1.2   && < 1.3,
    containers,
    data-default,
    lens                      >= 4.4   && <4.7,
    MonadCatchIO-transformers,
    mtl                       >= 2.2.1,
    text,
    snap                      >= 0.13  && < 0.14,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
