Name:                star-util
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  hs-source-dirs: src
  Exposed-modules:     Application.Star.CommonImports,
                       Application.Star.Instances,
                       Application.Star.Templates,
                       Application.Star.Util
  Build-depends:
    acid-state                >= 0.12.3 && < 0.13,
    aeson                     >= 0.7   && < 0.9,
    append-only-bb            >= 0.0   && < 0.1,
    base                      >= 4     && < 5,
    blaze-html                >= 0.7   && < 0.8,
    binary                    >= 0.7   && < 0.8,
    byteable                  >= 0.1   && < 0.2,
    bytestring,
    case-insensitive          >= 1.2   && < 1.3,
    containers,
    cryptohash-cryptoapi      >= 0.1   && < 0.2,
    crypto-pubkey             >= 0.2   && < 0.3,
    crypto-pubkey-types       >= 0.4   && < 0.5,
    data-default,
    -- >=0.5.3 looks like an odd constraint, see https://github.com/TomMD/DRBG/pull/4
    DRBG                      >= 0.5.3 && < 0.6,
    lens                      >= 4.4   && <4.7,
    MonadCatchIO-transformers,
    monadcryptorandom         >= 0.6   && < 0.7,
    mtl                       >= 2.2.1,
    text,
    safecopy                  >= 0.8   && < 0.9,
    snap                      >= 0.13  && < 0.14,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    star-types,
    transformers              >= 0.4.1.0 && < 0.5

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
